--- a/frontend/login_page/front_page_login_style.css
+++ b/frontend/login_page/front_page_login_style.css
@@ -8,12 +8,13 @@ body {
 }
 
 .header {
-    background-color: aquamarine;
+    background-color: #4FB3BF;
     height: 150px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
+    overflow: auto;
 }
 
 .logo {
@@ -42,7 +43,7 @@ body {
 .inner-box {
     width: calc(50% - 40px);
     min-height: 900px;
-    background-color: #7FFFD4;
+    background-color: #4FB3BF;
     border: 5px solid transparent;
     border-radius: 15px;
     padding: 10px;
@@ -65,7 +66,7 @@ body {
     right: -5px;
     bottom: -5px;
     border: 5px solid;
-    border-image: linear-gradient(to right, #5D9FFF, #7FFFD4);
+    border-image: linear-gradient(to right, #5D9FFF, #4FB3BF);
     border-image-slice: 1;
     border-radius: 15px;
     z-index: -1;
@@ -81,12 +82,13 @@ body {
     justify-content: center;
     margin-left: 100px;
     margin-right: 100px;
+    display: flex;
 }
 
 .heading-container-text {
-    border: 2px solid aquamarine;
+    border: 2px solid #4FB3BF;
     background: #5D9FFF;
-    padding: 20px;
+    padding: 20px 100px;
     border-radius: 5px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     color: #F8F8F8;
@@ -97,7 +99,7 @@ body {
 }
 
 .content-box {
-    background-color: #7FFFD4;
+    background-color: #4FB3BF;
     border-radius: 10px;
     padding: 20px;
     margin: 20px 0;
@@ -148,7 +150,7 @@ body {
 }
 
 label {
-    border: 1px solid aquamarine;
+    border: 1px solid #4FB3BF;
     background: #5D9FFF;
     padding: 5px 10px;
     border-radius: 5px;
