First api call and html created

--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -157,7 +157,6 @@ This part keeps track of the quantity of Barley, Hops, Wheat, etc.
     margin-left: 25px;
     margin-top: 10px;
     margin-bottom: -10px;
-
 }
 
 .maintenanceContainer {
@@ -170,6 +169,7 @@ This part keeps track of the quantity of Barley, Hops, Wheat, etc.
     height: 50px;
     float: left;
     border: 1px solid black;
+    z-index: 1; /* Set a lower z-index for the maintenance container */
 }
 
 .maintenanceBar {
@@ -181,6 +181,7 @@ This part keeps track of the quantity of Barley, Hops, Wheat, etc.
     box-sizing: border-box;
     animation: slide 1.5s ease-out forwards;
     transform-origin: left;
+    z-index: 0; /* Set a lower z-index for the maintenance bar */
 }
 
 @keyframes slide {
@@ -306,4 +307,33 @@ BATCH REPORTS FROM THIS POINT
 
 .reportHeader {
     width: 50%;
+}
+
+.popup {
+    position: fixed;
+    top: 20%;
+    left: 20%;
+    display: inline-block;
+    cursor: pointer;
+    z-index: 2; /* Set a higher z-index for the popup */
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
+    background-color: #E0FFFF;
+    width: 20rem;
+    font-family: Arial, sans-serif;
+    border-radius: 3px;
+    visibility: hidden;
+    color: #000000;
+    text-align: center;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 20;
+    /* Remove the bottom and left properties */
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
+    visibility: visible;
 }
