Refactor and started queue

--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -40,8 +40,7 @@ The logic behind the queue.
     border-collapse: collapse;
     padding: 16px;
     margin-right: 20px;
-
-
+    overflow: auto;
 }
 
 .progressAlignment {
