--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -41,6 +41,7 @@ The logic behind the queue.
     padding: 16px;
     margin-right: 20px;
     overflow: auto;
+    min-width: 300px;
 }
 
 .progressAlignment {
@@ -49,20 +50,11 @@ The logic behind the queue.
     margin-left: auto;
 }
 
-.arrowUp {
-    margin: 3px;
+.arrow {
     font-size: 26px;
     color: dodgerblue;
 }
-
-.arrowDown {
-    margin: 3px;
-    font-size: 26px;
-    color: dodgerblue;
-}
-
 .close {
-    margin: 3px;
     font-size: 24px;
     color: red;
 }
