--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -146,7 +146,7 @@ This part keeps track of the quantity of Barley, Hops, Wheat, etc.
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 80%;
+    height: 100%;
     box-sizing: border-box;
     animation: grow 1.5s ease-out forwards;
     transform-origin: bottom;
@@ -383,4 +383,28 @@ BATCH REPORTS FROM THIS POINT
 /* Toggle this class when clicking on the popup container (hide and show the popup) */
 .popup .show {
     visibility: visible;
+}
+
+#customAlert {
+    display: none;
+    position: fixed;
+    top: 10%;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    font-size: large;
+    font-weight: bold;
+    color: red;
+    letter-spacing: 1.2px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 25px;
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    z-index: 20;
+}
+
+#customAlert p {
+    margin: 0;
 }
