--- a/frontend/stylesheet.css
+++ b/frontend/stylesheet.css
@@ -19,8 +19,10 @@ The Display at the very top of the website
     font-size: xx-large;
 }
 
-.sduLogo {
-    margin-top: 20px;
+.Logo {
+    margin-top: 0px;
+    margin-bottom: 0px;
+
 }
 
 
